--- a/lab2/index.html
+++ b/lab2/index.html
@@ -1,11 +1,19 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Lab X - Subject/Topic</title>
+	<title> Lab 2 - Your first HTML </title>
 	<link rel="stylesheet" type="text/css" href="../css/site.css">
 	<link rel="stylesheet" type="text/css" href="css/lab.css">
 </head>
 <body>
+<h1>  Lab 2 - Your first HTML </h1>
+<p> Hello guy, this is a p </p>
+<p> Paris things to visit </p>
+<ul>
+<li> Arc de Triomphe </li>
+<li> Louvre </li>
+<li> Montmartre </li>
+</ul>
 
 </body>
 </html>
