--- a/lab2/index.html
+++ b/lab2/index.html
@@ -6,7 +6,7 @@
 	<link rel="stylesheet" type="text/css" href="css/lab.css">
 </head>
 <body>
-<h1>  Lab 2 - Your first HTML </h1>
+<h1>  Lab 2 - Dylan </h1>
 <p> Hello guy, this is a p </p>
 <p> Paris things to visit </p>
 <ul>
