--- a/lab2/index.html
+++ b/lab2/index.html
@@ -7,13 +7,14 @@
 </head>
 <body>
 <h1>  Lab 2 - Dylan </h1>
-<p> Hello guy, this is a p </p>
-<p> Paris things to visit </p>
+<p> Hello  </p>
+<p>  </p>
 <ul>
-<li> Arc de Triomphe </li>
-<li> Louvre </li>
-<li> Montmartre </li>
+<li>  </li>
+<li>  </li>
+<li>  </li>
 </ul>
 
 </body>
 </html>
+<p>
