--- a/lab2/index.html
+++ b/lab2/index.html
@@ -8,7 +8,8 @@
 <body>
 <h1>  Lab 2 - Dylan </h1>
 <p> Hello  </p>
-<p>  </p>
+<img src=/>
+<p> I am a communication design major with a focus in game design </p>
 <ul>
 <li>  </li>
 <li>  </li>
